--- a/project-api/pom.xml
+++ b/project-api/pom.xml
@@ -12,7 +12,11 @@
 
     <artifactId>project-api</artifactId>
 
-
-
+    <dependencies>
+        <dependency>
+            <groupId>br.com.rk</groupId>
+            <artifactId>project-services</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
