--- a/project-entities/pom.xml
+++ b/project-entities/pom.xml
@@ -12,5 +12,15 @@
 
     <artifactId>project-entities</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-java8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
