--- a/project-repositories/pom.xml
+++ b/project-repositories/pom.xml
@@ -17,6 +17,11 @@
             <groupId>br.com.rk</groupId>
             <artifactId>project-entities</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
