--- a/project-services/pom.xml
+++ b/project-services/pom.xml
@@ -17,6 +17,11 @@
             <groupId>br.com.rk</groupId>
             <artifactId>project-repositories</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
