--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: java
 jdk: oraclejdk8
+
+script:
+  - "mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
+  - "mvn test -B"
+  - "mvn cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
