--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,20 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Cobertura to use codecov.io -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <check/>
+                </configuration>
+            </plugin>
         </plugins>
 
         <pluginManagement>
