--- a/project-api/src/test/resources/application.properties
+++ b/project-api/src/test/resources/application.properties
@@ -1,5 +1,13 @@
-spring.datasource.url=jdbc:h2:mem:mydb
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.url=jdbc:hsqldb:hsql://localhost/testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
+####################################################
+# flyway configuration
+####################################################
+spring.flyway.url=jdbc:hsqldb:hsql://localhost/testdb
+spring.flyway.schemas=USERSERVICE
+spring.flyway.locations=db/migrations/test
+spring.flyway.user=root
+spring.flyway.password=root
