--- a/project-api/pom.xml
+++ b/project-api/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <flyway.version>5.2.4</flyway.version>
-            </properties>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -25,6 +25,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
