#7 Add configuration for flyway and hsql

--- a/project-api/src/test/resources/application.properties
+++ b/project-api/src/test/resources/application.properties
@@ -1,13 +1,19 @@
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:hsql://localhost/testdb
+####################################################
+# hikari
+####################################################
+spring.datasource.name=HikariCP-Pool
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+####################################################
+# database connection
+####################################################
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.url=jdbc:hsqldb:mem:.
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+
 ####################################################
 # flyway configuration
 ####################################################
-spring.flyway.url=jdbc:hsqldb:hsql://localhost/testdb
-spring.flyway.schemas=USERSERVICE
-spring.flyway.locations=db/migrations/test
-spring.flyway.user=root
-spring.flyway.password=root
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations/test
