--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
     </build>
 
     <dependencies>
-        <!-- Dependências de teste: JUnit, Mockito -->
+        <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -222,11 +222,13 @@
             <version>${mockito-all.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Used to bootstrap application, change to test scope when build projects using this architecture -->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>${hsqldb.version}</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
     </dependencies>
 
