#12 Organizing files and adding @Entity/@Table to each domain object

--- a/project-api/src/test/resources/application-test.properties
+++ b/project-api/src/test/resources/application-test.properties
@@ -17,3 +17,9 @@ spring.datasource.password=
 ####################################################
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations/test
+
+####################################################
+# flyway configuration
+####################################################
+spring.data.jpa.repositories.enabled=true
+spring.jpa.show-sql=true
