--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,12 @@
             <version>${hsqldb.version}</version>
             <!--<scope>test</scope>-->
         </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
