#15 Updating ReadOnlyRepository to @noBean and configuring resources

--- a/project-api/src/test/resources/application-test.properties
+++ b/project-api/src/test/resources/application-test.properties
@@ -19,7 +19,7 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations/test
 
 ####################################################
-# flyway configuration
+# spring data configuration
 ####################################################
 spring.data.jpa.repositories.enabled=true
 spring.jpa.show-sql=true
