--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
                         <failOnMissingWebXml>false</failOnMissingWebXml>
                         <archive>
                             <manifest>
-                                <mainClass>br.com.pacto.crm.Application</mainClass>
+                                <mainClass>br.com.rk.Application</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
