--- a/project-api/pom.xml
+++ b/project-api/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>project-api</artifactId>
+    <packaging>war</packaging>
 
     <properties>
         <flyway.version>5.2.4</flyway.version>
@@ -45,5 +46,27 @@
             <version>${flyway.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+        </resources>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
