#15 Using debug level for logs and improve Log aspect to capture Abstractions

--- a/project-api/src/main/resources/application.properties
+++ b/project-api/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.datasource.password=
 ####################################################
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations/hsql
+
+logging.level.br.com.rk=DEBUG
+debug=true
