#15 Moving migrations to entities project.

--- a/project-api/pom.xml
+++ b/project-api/pom.xml
@@ -56,6 +56,14 @@
                 </includes>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources/</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </testResource>
+        </testResources>
 
         <plugins>
             <plugin>
