--- a/project-api/src/main/resources/application.properties
+++ b/project-api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password=
 # flyway configuration
 ####################################################
 spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migrations/hsql
+spring.flyway.locations=classpath:/db/migrations/hsql
 
-logging.level.br.com.rk=DEBUG
-debug=true
+#logging.level.br.com.rk=DEBUG
+#debug=true
