--- a/project-api/src/test/resources/application-test.properties
+++ b/project-api/src/test/resources/application-test.properties
@@ -16,7 +16,7 @@ spring.datasource.password=
 # flyway configuration
 ####################################################
 spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migrations/test
+spring.flyway.locations=classpath:/db/migrations/hsql
 
 ####################################################
 # spring data configuration
